--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend-project",
   "version": "0.1.0",
+  "type": "commonjs",
   "private": true,
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
@@ -11,10 +12,12 @@
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "dotenv": "^16.4.5",
     "openai": "^4.70.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +54,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "react-app-rewired": "^2.2.1",
-    "sass": "^1.79.4"
+    "sass": "^1.79.4",
+    "webpack-cli": "^5.1.4"
   }
 }
